Updated tests so that they don't use encoded URIs Fixed minor alignment issue on searchpage.

--- a/webapp/src/main/webapp/includes/stylesheets/layout.css
+++ b/webapp/src/main/webapp/includes/stylesheets/layout.css
@@ -458,7 +458,6 @@ input[readonly]{background-color:#f0f0f0;}
 
 .navlinks {
 	display:inline-block;
-	text-align:center;
 	width:100%;
 	-webkit-user-select: none;  
 	-moz-user-select: none;    
